gdk-includes/include/gdk/gdk.h

/** A server session */
struct GA_session;
/** A Parsed JSON object */
typedef struct GA_json GA_json;
/** An api method call that potentially requires two factor authentication to complete */
struct GA_auth_handler;
/** A notification handler */
typedef void (*GA_notification_handler)(void* context, GA_json* details);
/**
 * Perform one-time initialization of the library. This call must be made once
 * only before calling any other GDK functions, including any functions called
 * from other threads.
 *
 * :param config: The :ref:`init-config-arg`.
 */
GDK_API int GA_init(const GA_json* config);
/**
 * Get any error details associated with the last error on the current thread.
 *
 * :param output: Destination for the output :ref:`error-details` JSON.
 *|     Returned GA_json should be freed using `GA_destroy_json`.
 */
GDK_API int GA_get_thread_error_details(GA_json** output);
/**
 * Create a new session.
 *
 * :param session: Destination for the resulting session.
 *|     The returned session should be freed using `GA_destroy_session`.
 *
 * Once created, the caller should set a handler for notifications using
 * `GA_set_notification_handler`, before calling `GA_connect` to connect the
 * session to the network for use.
 */
GDK_API int GA_create_session(struct GA_session** session);
/**
 * Set a handler to be called when notifications arrive for a session.
 *
 * :param session: The session to receive notifications for.
 * :param handler: The handler to receive notifications.
 * :param context: A context pointer to be passed to the handler.
 *
 * This call must be initially made on a session before `GA_connect`.
 * :ref:`ntf-notifications` may arrive on different threads, so the caller
 * must ensure that shared data is correctly locked within the handler.
 * The ``GA_json`` object passed to the caller must be destroyed by the
 * caller using `GA_destroy_json`. Failing to do so will result in
 * memory leaks.
 *
 * Once a session has been connected, this call can be made only with null
 * values for ``handler`` and ``context``. Once this returns, no further
 * notifications will be delivered for the lifetime of the session.
 *
 * The caller should not call session functions from within the callback
 * handler as this may block the application.
 */
GDK_API int GA_set_notification_handler(struct GA_session* session, GA_notification_handler handler, void* context);
/**
 * Free a session allocated by `GA_create_session`.
 *
 * :param session: The session to free.
 *
 * If the session was connected using `GA_connect` then this call will
 * disconnect it it before destroying it.
 */
GDK_API int GA_destroy_session(struct GA_session* session);
/**
 * Connect the session to the specified network.
 *
 * :param session: The session to connect.
 * :param net_params: The :ref:`net-params` of the network to connect to.
 *
 * This call connects to the remote network services that the session
 * requires, for example the Green servers or Electrum servers.
 * `GA_connect` must be called only once per session lifetime, after
 * `GA_create_session` and before `GA_destroy_session` respectively.
 * Once connected, the underlying network connection of the
 * session can be controlled using `GA_reconnect_hint`.
 *
 * Once the session is connected, use `GA_register_user` to create a new
 * wallet for the session, or `GA_login_user` to open an existing wallet.
 */
GDK_API int GA_connect(struct GA_session* session, const GA_json* net_params);
/**
 * Connect or disconnect a sessions underlying network connection.
 *
 * :param session: The session to use.
 * :param hint: the :ref:`reconnect` describing the desired reconnection behaviour.
 */
GDK_API int GA_reconnect_hint(struct GA_session* session, const GA_json* hint);
/**
 * Get the current proxy settings for the given session.
 *
 * :param session: The session to use.
 * :param output: Destination for the output :ref:`proxy-info`.
 *|     Returned GA_json should be freed using `GA_destroy_json`.
 */
GDK_API int GA_get_proxy_settings(struct GA_session* session, GA_json** output);
/**
 * Compute a hashed wallet identifier from a BIP32 xpub or mnemonic.
 *
 * The identifier returned is computed from the network combined with the
 * master chain code and public key of the xpub/mnemonic. It can be used
 * as a unique wallet identifier to mitigate privacy risks associated with
 * storing the wallet's xpub.
 *
 * :param net_params: The :ref:`net-params` of the network to compute an identifier for.
 * :param params: The :ref:`wallet-id-request` to compute an identifier for.
 * :param output: Destination for the output JSON.
 *|     Returned GA_json should be freed using `GA_destroy_json`.
 */
GDK_API int GA_get_wallet_identifier(const GA_json* net_params, const GA_json* params, GA_json** output);
/**
 * Make a request to an http server.
 *
 * :param session: The session to use.
 * :param params: the :ref:`http-params` of the server to connect to.
 * :param output: Destination for the output JSON.
 *|     Returned GA_json should be freed using `GA_destroy_json`.
 */
GDK_API int GA_http_request(struct GA_session* session, const GA_json* params, GA_json** output);
/**
 *
 * Refresh the sessions internal cache of Liquid asset information.
 *
 * Each release of GDK comes with a partial list of Liquid assets built-in.
 * This call is used to update it to include all the registered Liquid assets
 * or any new assets that have been registered since the last update.
 *
 * :param session: The session to use.
 * :param params: the :ref:`assets-params-data` of the server to connect to.
 */
GDK_API int GA_refresh_assets(struct GA_session* session, const GA_json* params);
/**
 *
 * Query the Liquid asset registry.
 *
 * This call is used to retrieve informations about a set of Liquid assets
 * specified by their asset id.
 *
 * :param session: The session to use.
 * :param params: the :ref:`get-assets-params` specifying the assets to query.
 * :param output: Destination for the output :ref:`asset-details`.
 *|     Returned GA_json should be freed using `GA_destroy_json`.
 */
GDK_API int GA_get_assets(struct GA_session* session, const GA_json* params, GA_json** output);
/**
 * Validate asset domain name.
 * (This is a interface stub)
 *
 */
GDK_API int GA_validate_asset_domain_name(struct GA_session* session, const GA_json* params, GA_json** output);
/**
 * Create a new user wallet.
 *
 * :param session: The session to use.
 * :param hw_device: :ref:`hw-device` or empty JSON for software wallet registration.
 * :param details: The :ref:`login-credentials` for software wallet registration.
 * :param call: Destination for the resulting GA_auth_handler to perform the registration.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * .. note:: When calling from C/C++, the parameters ``hw_device`` and ``details`` will be emptied when the call
 *completes.
 */
GDK_API int GA_register_user(
    struct GA_session* session, GA_json* hw_device, GA_json* details, struct GA_auth_handler** call);
/**
 * Authenticate to a user's wallet.
 *
 * :param session: The session to use.
 * :param hw_device: :ref:`hw-device` or empty JSON for software wallet login.
 * :param details: The :ref:`login-credentials` for authenticating the user.
 * :param call: Destination for the resulting GA_auth_handler to perform the login.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * If a sessions underlying network connection has disconnected and
 * reconnected, the user will need to login again using this function. In
 * this case, the caller can pass empty JSON for both ``hw_device`` and
 * ``details`` to login using the previously passed credentials and device.
 *
 * .. note:: When calling from C/C++, the parameters ``hw_device`` and ``details`` will be emptied when the call
 *completes.
 */
GDK_API int GA_login_user(
    struct GA_session* session, GA_json* hw_device, GA_json* details, struct GA_auth_handler** call);
/**
 * Free a GA_json object.
 *
 * :param json: GA_json object to free.
 */
GDK_API int GA_destroy_json(GA_json* json);