lib/ffi/generated_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

class NativeLibrary {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NativeLibrary(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NativeLibrary.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int __darwin_check_fd_set_overflow(
    int arg0,
    ffi.Pointer<ffi.Void> arg1,
    int arg2,
  ) {
    return ___darwin_check_fd_set_overflow(
      arg0,
      arg1,
      arg2,
    );
  }

  late final ___darwin_check_fd_set_overflowPtr =
      _lookup<ffi.NativeFunction<Native__darwin_check_fd_set_overflow>>(
          '__darwin_check_fd_set_overflow');
  late final ___darwin_check_fd_set_overflow =
      ___darwin_check_fd_set_overflowPtr
          .asFunction<Dart__darwin_check_fd_set_overflow>();

  /// Perform one-time initialization of the library. This call must be made once
  /// only before calling any other GDK functions, including any functions called
  /// from other threads.
  ///
  /// :param config: The :ref:`init-config-arg`.
  int GA_init(
    ffi.Pointer<GA_json> config,
  ) {
    return _GA_init(
      config,
    );
  }

  late final _GA_initPtr =
      _lookup<ffi.NativeFunction<NativeGA_init>>('GA_init');
  late final _GA_init = _GA_initPtr.asFunction<DartGA_init>();

  /// Get any error details associated with the last error on the current thread.
  ///
  /// :param output: Destination for the output :ref:`error-details` JSON.
  /// |     Returned GA_json should be freed using `GA_destroy_json`.
  int GA_get_thread_error_details(
    ffi.Pointer<ffi.Pointer<GA_json>> output,
  ) {
    return _GA_get_thread_error_details(
      output,
    );
  }

  late final _GA_get_thread_error_detailsPtr =
      _lookup<ffi.NativeFunction<NativeGA_get_thread_error_details>>(
          'GA_get_thread_error_details');
  late final _GA_get_thread_error_details = _GA_get_thread_error_detailsPtr
      .asFunction<DartGA_get_thread_error_details>();

  /// Create a new session.
  ///
  /// :param session: Destination for the resulting session.
  /// |     The returned session should be freed using `GA_destroy_session`.
  ///
  /// Once created, the caller should set a handler for notifications using
  /// `GA_set_notification_handler`, before calling `GA_connect` to connect the
  /// session to the network for use.
  int GA_create_session(
    ffi.Pointer<ffi.Pointer<GA_session>> session,
  ) {
    return _GA_create_session(
      session,
    );
  }

  late final _GA_create_sessionPtr =
      _lookup<ffi.NativeFunction<NativeGA_create_session>>('GA_create_session');
  late final _GA_create_session =
      _GA_create_sessionPtr.asFunction<DartGA_create_session>();

  /// Set a handler to be called when notifications arrive for a session.
  ///
  /// :param session: The session to receive notifications for.
  /// :param handler: The handler to receive notifications.
  /// :param context: A context pointer to be passed to the handler.
  ///
  /// This call must be initially made on a session before `GA_connect`.
  /// :ref:`ntf-notifications` may arrive on different threads, so the caller
  /// must ensure that shared data is correctly locked within the handler.
  /// The ``GA_json`` object passed to the caller must be destroyed by the
  /// caller using `GA_destroy_json`. Failing to do so will result in
  /// memory leaks.
  ///
  /// Once a session has been connected, this call can be made only with null
  /// values for ``handler`` and ``context``. Once this returns, no further
  /// notifications will be delivered for the lifetime of the session.
  ///
  /// The caller should not call session functions from within the callback
  /// handler as this may block the application.
  int GA_set_notification_handler(
    ffi.Pointer<GA_session> session,
    GA_notification_handler handler,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _GA_set_notification_handler(
      session,
      handler,
      context,
    );
  }

  late final _GA_set_notification_handlerPtr =
      _lookup<ffi.NativeFunction<NativeGA_set_notification_handler>>(
          'GA_set_notification_handler');
  late final _GA_set_notification_handler = _GA_set_notification_handlerPtr
      .asFunction<DartGA_set_notification_handler>();

  /// Free a session allocated by `GA_create_session`.
  ///
  /// :param session: The session to free.
  ///
  /// If the session was connected using `GA_connect` then this call will
  /// disconnect it it before destroying it.
  int GA_destroy_session(
    ffi.Pointer<GA_session> session,
  ) {
    return _GA_destroy_session(
      session,
    );
  }

  late final _GA_destroy_sessionPtr =
      _lookup<ffi.NativeFunction<NativeGA_destroy_session>>(
          'GA_destroy_session');
  late final _GA_destroy_session =
      _GA_destroy_sessionPtr.asFunction<DartGA_destroy_session>();

  /// Connect the session to the specified network.
  ///
  /// :param session: The session to connect.
  /// :param net_params: The :ref:`net-params` of the network to connect to.
  ///
  /// This call connects to the remote network services that the session
  /// requires, for example the Green servers or Electrum servers.
  /// `GA_connect` must be called only once per session lifetime, after
  /// `GA_create_session` and before `GA_destroy_session` respectively.
  /// Once connected, the underlying network connection of the
  /// session can be controlled using `GA_reconnect_hint`.
  ///
  /// Once the session is connected, use `GA_register_user` to create a new
  /// wallet for the session, or `GA_login_user` to open an existing wallet.
  int GA_connect(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> net_params,
  ) {
    return _GA_connect(
      session,
      net_params,
    );
  }

  late final _GA_connectPtr =
      _lookup<ffi.NativeFunction<NativeGA_connect>>('GA_connect');
  late final _GA_connect = _GA_connectPtr.asFunction<DartGA_connect>();

  /// Connect or disconnect a sessions underlying network connection.
  ///
  /// :param session: The session to use.
  /// :param hint: the :ref:`reconnect` describing the desired reconnection behaviour.
  int GA_reconnect_hint(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> hint,
  ) {
    return _GA_reconnect_hint(
      session,
      hint,
    );
  }

  late final _GA_reconnect_hintPtr =
      _lookup<ffi.NativeFunction<NativeGA_reconnect_hint>>('GA_reconnect_hint');
  late final _GA_reconnect_hint =
      _GA_reconnect_hintPtr.asFunction<DartGA_reconnect_hint>();

  /// Get the current proxy settings for the given session.
  ///
  /// :param session: The session to use.
  /// :param output: Destination for the output :ref:`proxy-info`.
  /// |     Returned GA_json should be freed using `GA_destroy_json`.
  int GA_get_proxy_settings(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<ffi.Pointer<GA_json>> output,
  ) {
    return _GA_get_proxy_settings(
      session,
      output,
    );
  }

  late final _GA_get_proxy_settingsPtr =
      _lookup<ffi.NativeFunction<NativeGA_get_proxy_settings>>(
          'GA_get_proxy_settings');
  late final _GA_get_proxy_settings =
      _GA_get_proxy_settingsPtr.asFunction<DartGA_get_proxy_settings>();

  /// Compute a hashed wallet identifier from a BIP32 xpub or mnemonic.
  ///
  /// The identifier returned is computed from the network combined with the
  /// master chain code and public key of the xpub/mnemonic. It can be used
  /// as a unique wallet identifier to mitigate privacy risks associated with
  /// storing the wallet's xpub.
  ///
  /// :param net_params: The :ref:`net-params` of the network to compute an identifier for.
  /// :param params: The :ref:`wallet-id-request` to compute an identifier for.
  /// :param output: Destination for the output JSON.
  /// |     Returned GA_json should be freed using `GA_destroy_json`.
  int GA_get_wallet_identifier(
    ffi.Pointer<GA_json> net_params,
    ffi.Pointer<GA_json> params,
    ffi.Pointer<ffi.Pointer<GA_json>> output,
  ) {
    return _GA_get_wallet_identifier(
      net_params,
      params,
      output,
    );
  }

  late final _GA_get_wallet_identifierPtr =
      _lookup<ffi.NativeFunction<NativeGA_get_wallet_identifier>>(
          'GA_get_wallet_identifier');
  late final _GA_get_wallet_identifier =
      _GA_get_wallet_identifierPtr.asFunction<DartGA_get_wallet_identifier>();

  /// Make a request to an http server.
  ///
  /// :param session: The session to use.
  /// :param params: the :ref:`http-params` of the server to connect to.
  /// :param output: Destination for the output JSON.
  /// |     Returned GA_json should be freed using `GA_destroy_json`.
  int GA_http_request(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> params,
    ffi.Pointer<ffi.Pointer<GA_json>> output,
  ) {
    return _GA_http_request(
      session,
      params,
      output,
    );
  }

  late final _GA_http_requestPtr =
      _lookup<ffi.NativeFunction<NativeGA_http_request>>('GA_http_request');
  late final _GA_http_request =
      _GA_http_requestPtr.asFunction<DartGA_http_request>();

  /// Refresh the sessions internal cache of Liquid asset information.
  ///
  /// :param session: The session to use.
  /// :param params: the :ref:`assets-params-data` of the server to connect to.
  /// :param output: Destination for the output :ref:`asset-informations`.
  /// |     Returned GA_json should be freed using `GA_destroy_json`.
  ///
  /// Each release of GDK comes with a list of the latest registered Liquid
  /// assets built-in. This call is used to return this data and/or to update
  /// it to include any new assets that have been registered since installation
  /// or the last update.
  int GA_refresh_assets(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> params,
    ffi.Pointer<ffi.Pointer<GA_json>> output,
  ) {
    return _GA_refresh_assets(
      session,
      params,
      output,
    );
  }

  late final _GA_refresh_assetsPtr =
      _lookup<ffi.NativeFunction<NativeGA_refresh_assets>>('GA_refresh_assets');
  late final _GA_refresh_assets =
      _GA_refresh_assetsPtr.asFunction<DartGA_refresh_assets>();

  /// Query the Liquid asset registry.
  ///
  /// :param session: The session to use.
  /// :param params: the :ref:`get-assets-params` specifying the assets to query.
  /// :param output: Destination for the output :ref:`asset-informations`.
  /// |     Returned GA_json should be freed using `GA_destroy_json`.
  ///
  /// This call is used to retrieve informations about a set of Liquid assets
  /// specified by their asset id.
  int GA_get_assets(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> params,
    ffi.Pointer<ffi.Pointer<GA_json>> output,
  ) {
    return _GA_get_assets(
      session,
      params,
      output,
    );
  }

  late final _GA_get_assetsPtr =
      _lookup<ffi.NativeFunction<NativeGA_get_assets>>('GA_get_assets');
  late final _GA_get_assets = _GA_get_assetsPtr.asFunction<DartGA_get_assets>();

  /// Validate asset domain name.
  /// (This is a interface stub)
  int GA_validate_asset_domain_name(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> params,
    ffi.Pointer<ffi.Pointer<GA_json>> output,
  ) {
    return _GA_validate_asset_domain_name(
      session,
      params,
      output,
    );
  }

  late final _GA_validate_asset_domain_namePtr =
      _lookup<ffi.NativeFunction<NativeGA_validate_asset_domain_name>>(
          'GA_validate_asset_domain_name');
  late final _GA_validate_asset_domain_name = _GA_validate_asset_domain_namePtr
      .asFunction<DartGA_validate_asset_domain_name>();
